--- a/test/suites/small-smoke.yaml
+++ b/test/suites/small-smoke.yaml
@@ -17,4 +17,4 @@ spec:
       - name: postman-workflow-smoke-template
       - name: soapui-workflow-smoke
       - name: pytest-workflow-smoke-junit-success-only
-      - name: cypress-workflow-smoke-14
+      - name: cypress-workflow-smoke
