special cases - missin parallelizm added

--- a/test/suites/special-cases/edge-cases-expected-fails.yaml
+++ b/test/suites/special-cases/edge-cases-expected-fails.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   steps:
   - execute:
+      parallelism: 2
       workflows:
       - name: expected-fail-cypress-incorrect-repo-path
       - name: expected-fail-cypress-incorrect-repo-path-cone-mode
