feat: [TKC-3946][TKC-3947] special-cases and expected-fail cases extended and updated (#6504)
* special cases - missin parallelizm added

* special cases and expected-fail cases - extended, special-cases-additional

* cleanup - old workflows removed

--- a/test/suites/special-cases/edge-cases-expected-fails.yaml
+++ b/test/suites/special-cases/edge-cases-expected-fails.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   steps:
   - execute:
+      parallelism: 2
       workflows:
       - name: expected-fail-cypress-incorrect-repo-path
       - name: expected-fail-cypress-incorrect-repo-path-cone-mode
@@ -21,8 +22,11 @@ spec:
       - name: expected-fail-private-registry-auth
       - name: expected-fail-private-repo-auth
       - name: expected-fail-missing-git-secret
-      - name: expected-fail-missing-env-secret
       - name: expected-fail-missing-template
       - name: expected-fail-service-exit-code
       - name: expected-fail-step-retry
       - name: expected-fail-negative-step
+      - name: expected-fail-volume-not-mounted
+      - name: expected-fail-template-missing-config-options
+      - name: expected-fail-template-not-defined-config-options
+      - name: expected-fail-service-readiness-probe
