--- a/test/examples/showcase/crd.yaml
+++ b/test/examples/showcase/crd.yaml
@@ -478,7 +478,7 @@ spec:
       - test/playwright/playwright-project
   container:
     workingDir: /data/repo/test/playwright/playwright-project
-    image: mcr.microsoft.com/playwright:v1.32.3-focal
+    image: mcr.microsoft.com/playwright:v1.53.2
     resources:
       requests:
         cpu: 2
