Add new states to OAS spec

--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -9211,10 +9211,15 @@ components:
       type: string
       enum:
         - queued
+        - assigned
+        - starting
         - running
+        - pausing
         - paused
+        - resuming
         - passed
         - failed
+        - stopping
         - aborted
         - canceled
 
