workflow tests - special cases and expected fail cases extended - optional and conditional step cases

--- a/test/suites/special-cases/edge-cases-expected-fails.yaml
+++ b/test/suites/special-cases/edge-cases-expected-fails.yaml
@@ -30,3 +30,4 @@ spec:
       - name: expected-fail-template-missing-config-options
       - name: expected-fail-template-not-defined-config-options
       - name: expected-fail-service-readiness-probe
+      - name: expected-fail-conditional-step-failed
