feat: [TKC-3978] workflow tests extended - additional optional and skipped cases (#6513)
* workflow tests - special cases and expected fail cases extended - optional and conditional step cases

* typo fixed

--- a/test/special-cases/edge-cases-expected-fails.yaml
+++ b/test/special-cases/edge-cases-expected-fails.yaml
@@ -568,3 +568,20 @@ spec:
   steps:
     - name: Check
       shell: echo "Should not reach this step if probe fails as expected"
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: expected-fail-conditional-step-failed
+  labels:
+    core-tests: expected-fail
+description: "conditional step failed"
+spec:
+  container:
+    image: alpine:3.22.0
+  job:
+    activeDeadlineSeconds: 30
+  steps:
+  - name: Conditional step (should be executed and fail)
+    condition: "true"
+    shell: echo "Should fail" && exit 1
