--- a/test/pact/pact-js-project/crd-workflow/smoke.yaml
+++ b/test/pact/pact-js-project/crd-workflow/smoke.yaml
@@ -15,6 +15,10 @@ spec:
   container:
     image: node:23.11.0
     workingDir: /data/repo/test/pact/pact-js-project
+    resources:
+      requests:
+        cpu: 512m
+        memory: 300Mi
   job:
     activeDeadlineSeconds: 300
   steps:
