chore: cleanup Makefile, remove unused targets (#6519)
* cleanup Makefile, remove unused targets

Signed-off-by: Dejan Zele Pejchev <pejcev.dejan@gmail.com>

* improve startup logs

Signed-off-by: Dejan Zele Pejchev <pejcev.dejan@gmail.com>

---------

Signed-off-by: Dejan Zele Pejchev <pejcev.dejan@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ vendor/
 
 /gen
 
+# Local binary directories
+bin
+
 ### JetBrains
 .idea
 *.iml
@@ -45,6 +48,9 @@ movie.mp4
 /dist
 .vscode
 
-
+# Local
 build/_local/values.dev.yaml
 depot-build-meta.json
+
+# Environment files
+.env
