--- a/test/junit-pregenerated-reports/crd-workflow/smoke.yaml
+++ b/test/junit-pregenerated-reports/crd-workflow/smoke.yaml
@@ -3,8 +3,8 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: junit-report-high-level-failure
   labels:
-    core-tests: special-cases
-    artifacts: "true"
+    core-tests: junit-pregenerated
+    junit: "true"
 spec:
   content:
     git:
@@ -27,8 +27,8 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: junit-report-high-level-without-testcases
   labels:
-    core-tests: special-cases
-    artifacts: "true"
+    core-tests: junit-pregenerated
+    junit: "true"
 spec:
   content:
     git:
@@ -51,8 +51,8 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: junit-report-high-level-testcase-both-error-and-failure
   labels:
-    core-tests: special-cases
-    artifacts: "true"
+    core-tests: junit-pregenerated
+    junit: "true"
 spec:
   content:
     git:
