relax golangci-lint rules around package comments and exports
Signed-off-by: Dejan Zele Pejchev <pejcev.dejan@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -13,6 +13,13 @@ linters:
       - third_party$
       - builtin$
       - examples$
+  settings:
+    revive:
+      rules:
+        - name: package-comments
+          disabled: true
+        - name: exported
+          disabled: true
 formatters:
   enable:
     - goimports
