oss installation tests - missing label added

--- a/test/testkube/installation-tests/crd-workflow/oss-installation.yaml
+++ b/test/testkube/installation-tests/crd-workflow/oss-installation.yaml
@@ -4,6 +4,7 @@ metadata:
   name: oss-standalone-installation-test
   labels:
     core-tests: installation
+    tool: testkube-oss
 spec:
   system:
     pureByDefault: true
